<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ActivityProfile">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/todo"
        android:src="@drawable/darurat" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="Profile"
        android:layout_marginTop="100dp"
        android:textStyle="bold"
        android:background="#F50057"
        android:textColor="#FBFBF9"
        android:textSize="25sp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txTv_Subheading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/title_profile"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txTv_Article"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:lineSpacingExtra="5sp"
                android:scrollbars="vertical"
                android:text="@string/article_profile" />

            <TextView
                android:id="@+id/txTv_Subheading2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:scrollbars="vertical"
                android:text="@string/article_profile2" />

            <TextView
                android:id="@+id/txTv_Subheading3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:lineSpacingExtra="5sp"
                android:autoLink="all"
                android:scrollbars="vertical"
                android:text="@string/article_profile3"
                android:textAppearance="@android:style/TextAppearance"
                android:textSize="13sp" />


        </LinearLayout>
    </ScrollView>
</RelativeLayout>